Added some test from other exercises

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     </head>
     <body>
 		<script>
-			var monPrenom = "Flynne"; alert(Flynne);
+			var monPrenom = "Flynne";
+      var var1 = 34;
+      var var2 = undefined;
+      var var3 = 'hello world';
+      var test1 = typeof var1; 
+      var test2 = typeof var2; 
+      var test3 = typeof var3; 
+
 		</script>
     </body>
 </html>
