Added js script with increment and decrement variables

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Attribuer une valeur à une variable</title>
+        <link rel="stylesheet" href="script.js">
     </head>
     <body>
 		<script>
